--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Lua
-        uses: leafo/setup-lua@v10
+        uses: leafo/gh-actions-lua@v10
         with:
           lua-version: "5.1"
           luarocks: true
