--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -20,6 +20,7 @@ jobs:
           luarocks: true
 
       - name: Install Dependencies
+        uses: leafo/gh-actions-luarocks@v4
         run: |
           luarocks install busted
 
