--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,8 +19,9 @@ jobs:
           lua-version: "5.1"
           luarocks: true
 
+      - uses: leafo/gh-actions-luarocks@v4
+
       - name: Install Dependencies
-        uses: leafo/gh-actions-luarocks@v4
         run: |
           luarocks install busted
 
