--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -16,8 +16,7 @@ jobs:
       - name: Set up Lua
         uses: leafo/gh-actions-lua@v10
         with:
-          lua-version: "5.1"
-          luarocks: true
+          luaVersion: "5.1"
 
       - uses: leafo/gh-actions-luarocks@v4
 
